--- a/proj1v2.html
+++ b/proj1v2.html
@@ -13,8 +13,9 @@
   <div class="wrapper">
     <div class="header bottom-line">
       <div class="logo">
-            <!-- <h1 class="logo-text">Code Catalyst</h1> -->
+          <a href="#">
             <img src="img/Group 61.svg" alt="logo";>
+          </a>
       </div>
       <div class="menu ">
         <a href="#" class="menu-link">Our Approach</a>
@@ -29,23 +30,49 @@
           <p1 class="secondary">Take a small step to a big project.</p1>
           <p1 class="contact">hello@codecatalyst.com</p1>
       </div>
-
-      <div class="right-column">
-          <div class="box">
-        <h1 class="name">Full Name</h1>
-          <p1 class="enter2">Enter your name</p1>
-          </div>
-        <div class="box2">
-          <p1 class="enter">Enter your email</p1>
-          <h1 class="email">Email Address</h1>
-        <!-- </div>
-        <div class="box3">
-          <h1 class="message">Message</h1>
-          <p1 class="question">Enter your question</p1>
-        </div> -->
+      <div class="form-group">
+        <form action="#">
+        <!-- <label class="form-group__title" for="name">Full Name</label> -->
+        <div class="name-group">
+              <p id="name">Full Name</p>
+              <p>Email Address</p>
+        </div>
+                  <div class="first-form">
+                      <input placeholder="Enter your name" type="text" class="name" required>
+                      <!-- <label class="form-group__title" for="email">Email Address</label> -->
+                      <input placeholder="Enter your email" type="email" class="email">
+                  </div>
+                              <div id="message">
+                                <label class="form-group__title">Message</label>
+                                <input placeholder="Enter your question" type="email" >
+                              </div>
+                  <div class="send">
+                    <p>SEND</p>
+                    <a href="#" >
+                        <img src="img/Group 61 (1).svg" alt="button" class="btn">
+                    </a>
+                  </div>
+         </form>
       </div>
+
+</div>
+<div class="footer">
+  <p class="code">Ⓒ 2019. Code Catalyst. All rights reserved</p>
+    <div class="user">
+        <p>Privacy Policy</p>
+    <p class="terms">Terms of Use</p>
     </div>
-    <div class="footer"></div>
-    </div>
+      <div class="society"
+          <a href="#" >
+              <img src="img/Vector.svg" alt="button" class="face">
+          </a>
+          <a href="#" >
+              <img src="img/Group 9.svg" alt="button" class="link">
+          </a>
+          <a href="#" >
+              <img src="img/Group 11.svg" alt="button" class="inst">
+          </a>
+      </div>
+</div>
 </body>
 </html>
