--- a/index.html
+++ b/index.html
@@ -32,25 +32,23 @@
       </div>
       <div class="form-group">
         <form action="#">
-        <!-- <label class="form-group__title" for="name">Full Name</label> -->
-        <div class="name-group">
-              <p id="name">Full Name</p>
-              <p>Email Address</p>
-        </div>
+          <div class="name-group">
+                <p id="name">Full Name</p>
+                <p>Email Address</p>
+          </div>
                   <div class="first-form">
                       <input placeholder="Enter your name" type="text" class="name" required>
-                      <!-- <label class="form-group__title" for="email">Email Address</label> -->
-                      <input placeholder="Enter your email" type="email" class="email">
+                      <input placeholder="Enter your email" type="email" class="email" required>
                   </div>
                               <div id="message">
-                                <label class="form-group__title">Message</label>
-                                <input placeholder="Enter your question" type="email" >
+                                <p class="form-group__title">Message</p>
+                                <input placeholder="Enter your question" type="text" required>
                               </div>
                   <div class="send">
-                    <p>SEND</p>
-                    <a href="#" >
+                    <p class="submit">SEND</p>
+                    <button type="submit">
                         <img src="img/Group 61 (1).svg" alt="button" class="btn">
-                    </a>
+                    </button>
                   </div>
          </form>
       </div>
@@ -59,18 +57,18 @@
 <div class="footer">
   <p class="code">Ⓒ 2019. Code Catalyst. All rights reserved</p>
     <div class="user">
-        <p>Privacy Policy</p>
-    <p class="terms">Terms of Use</p>
+        <a href="#" class="footer-link">Privacy Policy</a>
+        <a href="#" class="footer-link terms">Terms of Use</a>
     </div>
-      <div class="society"
+      <div class="society">
           <a href="#" >
-              <img src="img/Vector.svg" alt="button" class="face">
+              <img src="img/Vector.svg" alt="face" class="soc-link face">
           </a>
-          <a href="#" >
-              <img src="img/Group 9.svg" alt="button" class="link">
+          <a href="#">
+              <img src="img/Group 9.svg" alt="link" class="soc-link link">
           </a>
-          <a href="#" >
-              <img src="img/Group 11.svg" alt="button" class="inst">
+          <a href="#">
+              <img src="img/Group 11.svg" alt="inst" class="soc-link inst">
           </a>
       </div>
 </div>
